--- a/conFusion/app/menu.html
+++ b/conFusion/app/menu.html
@@ -27,27 +27,48 @@
     <div class="container">
         <div class="row row-content" ng-controller='menuController as menuCtrl'>
             <div class="row row-content">
-            <div class="col-xs-12">
-                <ul class="media-list">
-                    <li class="media" ng-repeat="dish in menuCtrl.dishes">
-                        <div class="media-left media-middle">
-                            <a href="#">
-                            <img class="media-object img-thumbnail"
-                             ng-src={{dish.image}} alt="Uthappizza">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h2 class="media-heading">{{dish.name}}
-                             <span class="label label-danger">{{dish.label}}</span>
-                             <span class="badge">{{dish.price | currency}}</span></h2>
-                            <p>{{dish.description}}</p>
-                            <p>Comment: {{dish.comment}}</p>
-                            <p>Type your comment:
-                             <input type="text" ng-model="dish.comment"></p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                <div class="col-xs-12">
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation"
+                        ng-class="{active:menuCtrl.isSelected(1)}">
+                        <a ng-click='menuCtrl.select(1)'
+                         aria-controls="all menu"
+                         role="tab">The Menu</a></li>
+                        <li role="presentation"
+                        ng-class="{active:menuCtrl.isSelected(2)}">
+                        <a ng-click='menuCtrl.select(2)'
+                         aria-controls="appetizers"
+                         role="tab">Appetizers</a></li>
+                        <li role="presentation"
+                        ng-class="{active:menuCtrl.isSelected(3)}">
+                        <a ng-click='menuCtrl.select(3)'
+                         aria-controls="mains"
+                         role="tab">Mains</a></li>
+                        <li role="presentation"
+                        ng-class="{active:menuCtrl.isSelected(4)}">
+                        <a ng-click='menuCtrl.select(4)'
+                         aria-controls="desserts"
+                         role="tab">Desserts</a></li>
+                    </ul>
+                    <div class="tab-content tab-pane fade in active">
+                        <ul class="media-list">
+                            <li class="media" ng-repeat="dish in menuCtrl.dishes | filter:menuCtrl.filtText">
+                                <div class="media-left media-middle">
+                                    <a href="#">
+                                    <img class="media-object img-thumbnail"
+                                     ng-src={{dish.image}} alt="Uthappizza">
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    <h2 class="media-heading">{{dish.name}}
+                                     <span class="label label-danger">{{dish.label}}</span>
+                                     <span class="badge">{{dish.price | currency}}</span></h2>
+                                    <p>{{dish.description}}</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             <div class="col-xs-12">
             </div>
         </div>
@@ -93,7 +114,28 @@
                            description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
                            comment: ''
                         }]
-            this.dishes = dishes
+            this.select = function(tab) {
+                this.tab = tab;
+
+                if (tab == 2) {
+                    this.filtText = "appetizer";
+                }
+                else if (tab == 3) {
+                    this.filtText = "mains";
+                }
+                else if (tab == 4) {
+                    this.filtText = "dessert";
+                }
+                else {
+                    this.filtText = "";
+                }
+            }
+            this.isSelected = function(tab){
+                return (this.tab == tab);
+            }
+            this.filtText = ''
+            this.tab = 1;
+            this.dishes = dishes;
         })
     </script>
 </body>
